--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-data-redis'
     implementation 'javax.inject:javax.inject:1'
     compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.28'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
