--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     compileOnly 'org.projectlombok:lombok'
 //	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-	runtimeOnly 'mysql:mysql-connector-java:8.0.28'
+	runtimeOnly 'mysql:mysql-connector-java'
+
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -38,6 +39,7 @@ dependencies {
 
 	// apache
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
+	implementation "commons-codec:commons-codec:1.15"
 
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-common:1.6.6'
@@ -48,6 +50,14 @@ dependencies {
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-simplexml:2.9.0'
 	implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+
+
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	testImplementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
+	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
 }
 
 tasks.named('test') {
