--- a/build.gradle
+++ b/build.gradle
@@ -14,32 +14,76 @@ configurations {
 	}
 }
 
+ext {
+	set('springCloudVersion', "2021.0.1")
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// query dsl
+	implementation 'com.querydsl:querydsl-jpa:5.0.0'
+	implementation 'com.querydsl:querydsl-core:5.0.0'
+	annotationProcessor(
+			'javax.persistence:javax.persistence-api:2.2',
+			'javax.annotation:javax.annotation-api:1.3.2',
+			'com.querydsl:querydsl-apt:5.0.0:jpa'
+	)
+	testImplementation 'com.querydsl:querydsl-jpa:5.0.0'
+	testAnnotationProcessor 'com.querydsl:querydsl-apt:5.0.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-jetty'
+
 	implementation 'org.springframework.session:spring-session-core'
 	implementation 'org.springframework.session:spring-session-data-redis'
-    implementation 'javax.inject:javax.inject:1'
-    compileOnly 'org.projectlombok:lombok'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+
+	// dev
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// jdbc
 //	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	runtimeOnly 'mysql:mysql-connector-java'
 
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
 
-	// apache
+	// validation
+	implementation("org.springframework.boot:spring-boot-starter-validation")
+	implementation('org.hibernate:hibernate-validator:7.0.3.Final')
+
+	// apache common lang3
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation "commons-codec:commons-codec:1.15"
+
+	// google guava
+	implementation("com.google.guava:guava:31.1-jre")
+
+
+	// annotationProcessor
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+	// lombok
+	annotationProcessor 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor('org.projectlombok:lombok')
+	testCompileOnly('org.projectlombok:lombok')
+
+	// testImplementation
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+	// mapstruct
+	compileOnly 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
 	// swagger
 	implementation 'org.springdoc:springdoc-openapi-common:1.6.6'
@@ -51,34 +95,33 @@ dependencies {
 	implementation 'com.squareup.retrofit2:converter-simplexml:2.9.0'
 	implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
+}
 
-	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
-	testImplementation 'org.mapstruct:mapstruct:1.4.2.Final'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
-
-	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
-tasks {
-	processResources { duplicatesStrategy = org.gradle.api.file.DuplicatesStrategy.EXCLUDE }
-}
-/**
- * > gradle clean build -x test -Pprofile=test-qa
- */
+
+def queryDslOutput = file(new File(projectDir, '/src/main/generated/'))
 sourceSets {
-	ext.profile = (!project.hasProperty('profile') || !profile) ? 'local' : profile
-	println "current profile : ${profile}"
 	main {
 		java {
-			srcDirs "src/main/java"
-		}
-		resources {
-			srcDirs "src/main/resources", "src/main/resources/env/${profile}/"
+			srcDir queryDslOutput
 		}
 	}
 }
 
+compileJava {
+	options.compilerArgs << '-s'
+	options.compilerArgs << "$projectDir/src/main/generated/"
+
+	doFirst {
+		delete(files("${projectDir}/src/main/generated/"))
+		file(new File(projectDir, '/src/main/generated/')).mkdirs();
+	}
+}
