--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,6 +82,14 @@ spring:
       preferred-json-mapper: jackson
   jackson:
     date-format: com.fasterxml.jackson.databind.util.ISO8601DateFormat
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
+        default-page-size: 20
+        max-page-size: 1000
+        page-parameter: page
+        size-parameter: size
 
 
 # actuator
