--- a/build.gradle
+++ b/build.gradle
@@ -37,15 +37,14 @@ dependencies {
 	testImplementation 'com.querydsl:querydsl-jpa:5.0.0'
 	testAnnotationProcessor 'com.querydsl:querydsl-apt:5.0.0'
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-jetty'
 
 	implementation 'org.springframework.session:spring-session-core'
-	implementation 'org.springframework.session:spring-session-data-redis'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
 	// dev
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -54,10 +53,9 @@ dependencies {
 //	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	runtimeOnly 'mysql:mysql-connector-java'
 
-
 	// validation
 	implementation("org.springframework.boot:spring-boot-starter-validation")
-	implementation('org.hibernate:hibernate-validator:7.0.3.Final')
+	implementation('org.hibernate:hibernate-validator:7.0.4.Final')
 
 	// apache common lang3
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
